# scrapVkData

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
app/: schemas.py  scraper.py  settings.py
